cabal-version:      3.4

name:               bluesky-tools
version:            0.2.2.0
synopsis:           Tools for interacting with Bluesky / AT Protocol
description:
  bluesky-tools provides tools that I've found useful while trying to integrate
  my applications with the Bluesky social network (https://bsky.social).
  Some or most of the tools are more correctly AT protocol tools, rather than
  specific to Bluesky, but I have not made that distinction in the docs.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Ben Millwood
maintainer:         thebenmachine+git@gmail.com
copyright:          2025 Ben Millwood
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

source-repository head
  type: git
  location: https://github.com/bmillwood/bluesky-tools

common language
  default-language: GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    OverloadedStrings
    ViewPatterns

common warnings
  ghc-options: -Wall

library
  import: language
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Bluesky.Did
    Bluesky.Handle
  -- other-modules:
  build-depends:
    aeson ^>=2.1,
    async ^>=2.2,
    base ^>=4.18,
    dns ^>=4.2,
    http-api-data ^>=0.6,
    http-client ^>=0.7,
    http-types ^>=0.12,
    text ^>=2.0,
    transformers ^>=0.6,

test-suite bluesky-tools-test
  import: language
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Handle
  build-depends:
    base ^>=4.18,
    bluesky-tools,
    text ^>=2.0,
